# library-service

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile
.github/workflows/: tests.yml
configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
include/handlers/: library_grpc.hpp
include/repository/: postgres_manager.hpp  repository.hpp
include/structs/: library_postgres.hpp
include/tools/: utils.hpp
postgresql/schemas/: playhub.sql
src/: main.cpp
src/handlers/: library_grpc.cpp
src/repository/: postgres_manager.cpp
src/tools/: utils.cpp
tests/: library_service_test.cpp  utils_test.cpp
